[tool.poetry]
name = "global-logger"
version = "0.4.1"
description = "Based on Python built-in logger, expands it, and provides a global logger to your system. Easy on-screen and/or .log files output setup without pain for Python newcomers. Python 2 and 3 compatible"
authors = ["Alexey Rubasheff <alexey.rubasheff@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/ALERTua/global_logger"
packages = [
    { include = "global_logger" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=2.7.18,<3.0 || >=3.7,<4.0"
pathlib = { version = "1.0.1", python = "<3.4" }
enum34 = { version = "1.1.10", python = "<3.6" }
future = { version = "1.0.0", python = "<3" }
colorama = [
    { version = "0.4.6", python = ">3" },
    { version = "<5", python = "<3" }
]
colorlog = [
    {version = "<5", python = "<3.5"},
    {version = "6.8.2", python = ">=3.5"}
]
pendulum = [
    { version = "^3.0.0", python = ">3.8" },
    { version = ">=2.1.2", python = "<=3.8" }
]
win-unicode-console = [
    {version = "==0.4", markers = "platform_system == 'Windows' and platform_version >= '10.0.18362'"},
    {version = ">0.4", markers = "platform_system == 'Windows' and platform_version < '10.0.18362'"}
]

[tool.poetry.group.dev.dependencies]
python = "^3.12"
tox = [
    { version = "==4.5.1", python = "^3.9" },
    { version = "==3.28.0", python = "<3" }
]
python-dotenv = [
    { version = "^1.0.1", python = "^3.12" },
    { version = "==0.18.0", python = "<3" }
]
pre-commit = { version = "^3.7.1", python = "^3.12" }
wheel = { version = "==0.37.1", python = "^3.12" }
ruff = { version = "^0.5.4", python = "^3.12" }
sphinx = { version = '7.4.7', python = "^3.12" }
sphinx_rtd_theme = { version = '^2.0.0', python = "^3.12" }

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
