[project]
name = "global-logger"
version = "0.4.7"
description = "Based on Python built-in logger, expands it, and provides a global logger to your system. Easy on-screen and/or .log files output setup without pain for Python newcomers. Python 2 and 3 compatible"
authors = [{name = "Alexey Rubasheff", email = "alexey.rubasheff@gmail.com>"}]
#authors = ["Alexey Rubasheff <alexey.rubasheff@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/ALERTua/global_logger"
packages = [
    { include = "global_logger" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.poetry.group.main.dependencies]
python = ">=2.7.18,<3.0 || >=3.9,<4"
pathlib = { version = "1.0.1", python = "<3.4" }
enum34 = { version = "1.1.10", python = "<3.6" }
future = { version = "1.0.0", python = "<3" }
colorama = [
    { version = "0.4.6", python = ">3" },
    { version = "<5", python = "<3" }
]
colorlog = [
    {version = "<5", python = "<3.5"},
    {version = "==6.8.2", python = ">=3.5"}
]
win-unicode-console = [
    {version = "^0.5", markers = "platform_system == 'Windows'", python = ">=3.5"},
    {version = "==0.4", markers = "platform_system == 'Windows'", python = "<3.5"},
]

[tool.poetry.group.dev.dependencies]
python = "^3.9"
tox = [
    { version = "==4.5.1", python = "^3" },  # 4.5.1 is the only version working
    { version = "==3.28.0", python = "<3" }
]
python-dotenv = [
    { version = "^1.0.1", python = "^3.12" },
    { version = "==0.18.0", python = "<3" }
]
pre-commit = { version = "^4.1.0", python = "^3.12" }
wheel = { version = "==0.45.1", python = "^3.12" }
ruff = { version = "^0.9.4", python = "^3.12" }
sphinx = { version = '8.1.3', python = "^3.12" }
sphinx_rtd_theme = { version = '^3.0.2', python = "^3.12" }
poetry-plugin-export = { version = '^1.9.0', python = "^3.12" }
pytest = { version = '^8.3.5', python = "^3.12" }
toml = "^0.10.2"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
